# djava

./: .dockerignore  Dockerfile  README.md  eval_dataset.json  evaluation_report.csv  pyproject.toml  rag_evaluator.py  start.sh
app/: config.py  embedding.py  es.py  es_index.py  es_writer.py  logger.py  main.py  milvus_writer.py  model_api.py  qwen_LLM.py  qwen_sglang.py  qwen_sglang_stream.py  rag_engine_qurey.py  retriever.py  try_reraken.py
app/milvus/: create_collection.py  embedding.py  faq_index.py  gen_faq.py  index_all.py  main.py  milvus_writer.py  qwen_LLM.py  rag_pipeline.py  retriever.py  try.py  try_reraken.py
app/my_redis/: cache.py  try_cache.py
frontend/: web_ui.py
rag_eval_langgraph/: eval_dataset.json  rag_evaluator.py
